--- a/PTPMQL/BAITAP2102/Views/BMI/Index.cshtml
+++ b/PTPMQL/BAITAP2102/Views/BMI/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Tính chỉ số BMI";
 }
 
-<h2>Tính chỉ số BMI</h2>
+<dotdoth2>Tính chỉ số BMI</dotdoth2>
 
 <form method="post">
     <label>Cân nặng (kg):</label>
