--- a/PTPMQL/MvcMovie/Views/HelloWorld/index.cshtml
+++ b/PTPMQL/MvcMovie/Views/HelloWorld/index.cshtml
@@ -1,5 +1,7 @@
 @{
-    ViewData["Title"] = "Employee Index";
+    ViewData["Title"] = "Index";
 }
-<h2>Employee Index</h2>
-<p>Danh sách nhân viên.</p>
+
+<h2>Index</h2>
+
+<p>Hello from our View Template!</p>
