--- a/PTPMQL/MvcMovie/Views/Home/Index.cshtml
+++ b/PTPMQL/MvcMovie/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<form asp-action="Index">
+<form asp-action="Index" method="post">
     <label>Nhập họ tên:</label>
     <input type="text" name="FullName">
     
@@ -11,4 +11,5 @@
     
     <input type="submit" value="Gửi dữ liệu">
 </form>
+
 <h1>@ViewBag.Message</h1>
